fix spacing in post header and author

--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ footer {
     gap: 10px; 
     border-right: 2px solid white;
     height: 100%;
+    width: 100px;;
     box-sizing: border-box;
 }
 
@@ -251,7 +252,7 @@ footer {
     font-size: 12px;
     color: #012036;
     text-align: left;
-    margin: 0;
+    overflow-wrap: break-word;
 }
   
 .post-text {
